# AiSD

./: Binheap.cpp  Binheap.h  CMakeLists.txt  Fibheap.cpp  Fibheap.h  IPQueue.h  Lheap.cpp  Lheap.h  Sheap.cpp  Sheap.h  TwoThreeTree.cpp  TwoThreeTree.h  beap.cpp  beap.h  heap.cpp  heap.h  main.cpp
Dicts/: Avl.cpp  Avl.h  Bst.cpp  Bst.h  IDict.h
